added cover image on outline page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,12 @@ format:
   pdf:
     documentclass: scrreprt
 
+website:
+  site-url: "https://pybook.eraheem.com"
+  twitter-card:
+    creator: "@eraheem"
+
+    
 bibliography: references.bib
 
 
