--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 book:
   title: "Chasing Python"
   subtitle: "Step into and run with Python for Data Science"
-  description: "This book teaches Python programming fundamentals and data analytic stack to help you stepping into and runing with Python for data science. Python is an excellent programming language for data science and machine learning due to its simplicity, versatility, and the wealth of libraries available in its data analytic stack, including NumPy, Pandas, Matplotlib and Seaborn."
+  description: "This book teaches Python programming fundamentals and data analytic stack to help you learning Python for data science in small steps. Python is an excellent programming language for data science and machine learning due to its simplicity, versatility, and the wealth of libraries available in its data analytic stack, including NumPy, Pandas, Matplotlib and Seaborn."
   author: "Enayetur Raheem"
   date:  "2023/07/24"
   cover-image: images/pybook-cover.png
