added meta description + cover image

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,7 +44,9 @@ website:
   twitter-card:
     creator: "@eraheem"
 
-    
+body-header: | 
+  This is work in progress. 
+
 bibliography: references.bib
 
 
